image team done

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
+    <main>
+        <img src="images/architect.png" alt="">
+        <img src="images/team1.png" alt="">
+    </main>
 </body>
 </html>
