--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <main>
         <img src="images/architect.png" alt="">
         <img src="images/team1.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
     </main>
 </body>
 </html>
